injected business name and redirect link

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,14 +9,14 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wdth,wght@0,62.5..100,100..900;1,62.5..100,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>ASSENT | Easy Review</title>
+    <title>BUSINESS_NAME | Easy Review</title>
   </head>
   <body>
     <div class="feedback-card">
       <h1>Give feedback</h1>
       <p class="subtitle">
         What are your thoughts on the experience with
-        <span class="business-name">ASSENT</span>?
+        <span class="business-name">BUSINESS_NAME</span>?
       </p>
 
       <form id="feedbackForm" autocomplete="off">
@@ -101,7 +101,7 @@
         </button>
       </form>
     </div>
-
     <div id="toast" class="toast">Feedback submitted successfully!</div>
+    <div id="business-link-placeholder"></div>
   </body>
 </html>
